# final-project-6122

./: .gitignore
docs/: Project+Proposal.docx  project-ideas.txt  to-dos.txt
drive-backup/: Notes_04112018.txt
drive-backup/6122 Final Project/final_project/: CMakeLists.txt
drive-backup/6122 Final Project/final_project/source/: main.cpp
drive-backup/final_project/: CMakeLists-Copy.txt  CMakeLists.txt
drive-backup/final_project/include/: Background.h  Shader.h  Shader2.h
drive-backup/final_project/lib/glad/src/: glad.c
drive-backup/final_project/lib/glfw/: CMakeLists.txt
drive-backup/final_project/source/: main.cpp
final_project/: .gitignore  CMakeLists.txt
final_project/Files/: Results.txt
final_project/dont_ignore/: nothing.txt
final_project/include/: Avatar.h  Background.h  LeaderBoard.h  Lifesyms.h  Lifetext.h  Menu.h  Obstacle.h  ScoreBoard.h  ScreenObject.h  Scroller.h  Speedup.h  character.h
final_project/lib/glfw/: CMakeLists.txt
final_project/source/: main.cpp
